--- a/homepage.html
+++ b/homepage.html
@@ -484,6 +484,8 @@
           </div>
           <div class="col">
             <button>submit</button>
+
+            <button>submit</button>
           </div>
 
         </div>
