FAQ and JS added

--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="home-navbar-brand navbar-brand" href="#">
           <img src="image\logo-large.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -38,16 +38,16 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
+          <div class="navbar-nav home-navbar-nav ms-auto">
 
-            <a class="nav-link nav-link-book-a-cleaner" href="#">Book a Cleaner</a>
-            <a class="nav-link " href="#"> Prices</a>
-            <a class="nav-link ">Our Guarantee</a>
-            <a class="nav-link ">Blog</a>
-            <a class="nav-link ">Contact us</a>
-            <a class="nav-link  nav-link-login">Login</a>
-            <a class="nav-link  nav-link-become-a-helper">Become a Helper</a>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link home-nav-link nav-link-book-a-cleaner" href="#">Book a Cleaner</a>
+            <a class=" nav-link home-nav-link " href="#"> Prices</a>
+            <a class="nav-link home-nav-link ">Our Guarantee</a>
+            <a class="nav-link home-nav-link ">Blog</a>
+            <a class="nav-link home-nav-link ">Contact us</a>
+            <a class="nav-link home-nav-link  nav-link-login">Login</a>
+            <a class="nav-link home-nav-link  nav-link-become-a-helper">Become a Helper</a>
+            <a class="nav-link home-nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
               <img src="image\ic-flag.png">
             </a>
