admin-user added

--- a/HTML/servicehistory.html
+++ b/HTML/servicehistory.html
@@ -13,6 +13,8 @@
     <!--Custome Css-->
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!--fonts-->
 
 
@@ -113,8 +115,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -128,8 +137,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -143,8 +159,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -158,8 +181,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -173,8 +203,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -188,8 +225,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -203,8 +247,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -218,8 +269,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -233,8 +291,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -248,8 +313,15 @@
                             <p>12:00-18:00</p>
 
                         </td>
-                        <td data-label="Service Provider">
-                            <img src="../image/cap.png" alt="..">Lyum Watson
+                        <td data-label="Service Provider" class="clearfix">
+                            <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span>4</span></div>
                         </td>
                         <td data-label="Payment">
                             <p class="price">€63 </p>
@@ -259,6 +331,64 @@
                     </tr>
                 </tbody>
             </table>
+
+            <div class="card mobileview clearfix" style="width: 100%;">
+                <div class="card-body">
+                    <span><img src="../image/calendar.png" alt="calender"><span class="date">31/03/2018</span> 12:00-18:00</span>
+                    <hr>
+                    <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                    <div>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4</span></div>
+                    <hr>
+                    <p class="price">€63 </p>
+                    <hr>
+                    <div class="text-center"><button class="completed">completed</button></div>
+                    <hr>
+                    <div class="text-center"><button class="rate">Rate SP</button></div>
+                </div>
+                <div class="card-body">
+                    <span><img src="../image/calendar.png" alt="calender"><span class="date">31/03/2018</span> 12:00-18:00</span>
+                    <hr>
+                    <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                    <div>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4</span></div>
+                    <hr>
+                    <p class="price">€63 </p>
+                    <hr>
+                    <div class="text-center"><button class="cancelled">cancelled</button></div>
+                    <hr>
+                    <div class="text-center"><button class="rate">Rate SP</button></div>
+                </div>
+                <div class="card-body">
+                    <span><img src="../image/calendar.png" alt="calender"><span class="date">31/03/2018</span> 12:00-18:00</span>
+                    <hr>
+                    <div class="cap-icon"><img src="../image/cap.png" alt=".."></div>Lyum Watson
+                    <div>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4</span></div>
+                    <hr>
+                    <p class="price">€63 </p>
+                    <hr>
+                    <div class="text-center"><button class="completed">completed</button></div>
+                    <hr>
+                    <div class="text-center"><button class="rate">Rate SP</button></div>
+                </div>
+
+
         </div>
     
         <div id="service_schedule" class="tabcontent">
@@ -305,32 +435,7 @@
 
 
 
-    <div class="row contact-row">
-
-
-        <div class="col contact-col-email">
-            <p class="contact-text">
-                GET OUR NEWSLETTER
-            </p>
-
-            <div class="row ">
-                <div class="col-sm-7 contact-email-col">
-                    <input class="contact-email-textbox" placeholder="  YOUR EMAIL">
-                </div>
-                <div class="col-sm-4 contact-submit-col">
-                    <button class="contact-submit-button">submit</button>
-
-                </div>
-
-            </div>
-
-
-
-        </div>
-
-
-
-    </div>
+    
 
     <div class="container-fluid footer-container">
         <div class="row">
