--- a/HTML/admin-user-management.html
+++ b/HTML/admin-user-management.html
@@ -126,7 +126,7 @@
 
                         </div>
                         <div class="col-1">
-                            <a class="btn btn-primary Serach">Serach</a>
+                            <a class="btn btn-primary admin-user-form-search">Serach</a>
 
                         </div>
                         <div class="col-1">
